add: 完善工银项目复盘

--- a/source/_posts/5-笔记和复盘/项目复盘/工银-自动化报告.md
+++ b/source/_posts/5-笔记和复盘/项目复盘/工银-自动化报告.md
@@ -1,19 +1,46 @@
 ## 编辑器加锁处理
 
-1. 每十分钟轮询一次请求
+1. 每十分钟轮询一次请求，加锁处理;
+2. 用户“点击退出编辑”+“组件卸载”, 都去调用解锁接口;
 
-## word导出方案
 
-1. word导出方案整套流程
+## word导出图片
+
+1. 遇到的问题: 服务部署在客户的虚拟机上，无法访问外网，而highchart提供的导出图片功能，需要再部署一套highchart node 服务，是需要访问外网，所以我们考虑使用 `puppeteer` 在node端绘图;
+2. 好处，可多项目复用，可迁移，可将导出图片功能单独提供给客户;
+
+
+
+## 富文本编辑器
+
+1. 源码的实现上，使用了属性 `contenteditable`, 使得元素可编辑；
+2. 编辑器最终的输出实际上是 html
+
+
+
+## 富文本编辑器的导出word功能
+
+1. 研报word导出方案
    1. 材料：html字符串； 结果：格式完整个的word, 包括字体、样式，颜色，table、标题等；
    2. 前端可以做么？- 不行， 因为部分导出需求并不在我们系统；
    3. 谁来做：后端？ 后端调研后给出结论，标题失效
-   4. 于是考虑
 
 
+2. 在node端导出word
+   1. 输入: html
+   2. 输出: word二进制文件流
+   3. 数据来源：在node服务端
+   5. 库：
+      1. 解析html: cheerio;
+      2. 绘图: highchart + puppeteer-core;
+      3. html=>word: html-2-word;
 
-
-
+3. 最终效果
+   1. 还不错，满足客户提出的功能清单;
+   2. 该服务应用于多个项目;
+   4. 现在仍然存在的问题&原因：
+      1. 有很多优化空间，比如在数据替换中，有图表，报表，要素，接口没有做批量请求，所以node端需要循环遍历向后端发起同步请求，拿到请求结果后，依次替换，这样做导致我们的导出服务很慢，如果遇到一篇内容很多的研报，导出一份word需要很久;
+      2. 但是由于项目已经在稳定运行，且外包开发时任务密集，导致无法推动前后端协同去做优化，这样该服务的复用性和健壮性都不太理想，考虑人员流动性极高，后期运维成本很高;
 
 ## 项目 => tabs 改造
 
