--- a/source/_posts/5-笔记和复盘/项目复盘/民生星探-移动端.md
+++ b/source/_posts/5-笔记和复盘/项目复盘/民生星探-移动端.md
@@ -1,3 +1,14 @@
+# 遇到的问题
+
+## 移动端适配方案探索
+
+px => vw
+
+1. 项目使用的styled-component, 所以使用 postcss 自定义单位 不适用，于是采用 styled-component 可执行函数的特点，自定义单位转换函数=>`375 === 100vw`;
+2. 字体、颜色，通过元子编程实现，即全局定义类名;
+
+
+
 ## html保存为图片方案及踩坑
 
 1. 需求
