--- a/source/_posts/5-笔记和复盘/项目复盘/腾安基金.md
+++ b/source/_posts/5-笔记和复盘/项目复盘/腾安基金.md
@@ -1,22 +1,25 @@
 # 遇到难题
 
-## element 不满足需求
+## element Select组件 不满足业务需求
 
 1. 问题：element select multiple 情况下, 不支持根据option数据修改tag样式
 2. 解决方法：
+   1. 通过 `replace-in-file`, 修改源码
+   2. 修改 package.json, 在启动项目之前，先执行脚本进行替换
 
-通过 `replace-in-file`, 修改源码
 
 ```js
 const replace = require('replace-in-file');
 const path = require('path');
 
 const file = path.resolve(__dirname, '../node_modules/element-ui/lib/element-ui.common.js');
-(() => {
 
-  const results = replace.sync({
-    files: file,
-    from: `props: {
+/**
+ * 为了解决select组件多选时，不支持修改tag样式
+ */
+const results = replace.sync({
+  files: file,
+  from: `props: {
     value: {
       required: true
     },
@@ -27,7 +30,7 @@ const file = path.resolve(__dirname, '../node_modules/element-ui/lib/element-ui.
       default: false
     }
   },`,
-    to: `props: {
+  to: `props: {
     value: {
       required: true
     },
@@ -39,52 +42,49 @@ const file = path.resolve(__dirname, '../node_modules/element-ui/lib/element-ui.
     },
     tagOptions: Object
   },`,
-  });
+});
 
-  console.log(results);
+console.log(results);
 
-})();
 
-(() => {
 
-  const results = replace.sync({
-    files: file,
-    from: `{
-                          key: _vm.getValueKey(item),
-                          attrs: {
-                            closable: !_vm.selectDisabled,
-                            size: _vm.collapseTagSize,
-                            hit: item.hitState,
-                            type: "info",
-                            "disable-transitions": ""
-                          },
-                          on: {
-                            close: function($event) {
-                              _vm.deleteTag($event, item)
-                            }
-                          }
-                        },`,
-    to: `{
-                          key: _vm.getValueKey(item),
-                          class:[item.tagOptions && item.tagOptions.className ? item.tagOptions.className:""],
-                          attrs: {
-                            closable: !_vm.selectDisabled,
-                            size: _vm.collapseTagSize,
-                            hit: item.hitState,
-                            type: item.tagOptions && item.tagOptions.type ? item.tagOptions.type : "info",
-                            "disable-transitions": ""
-                          },
-                          on: {
-                            close: function($event) {
-                              _vm.deleteTag($event, item)
-                            }
-                          }
-                        },`,
-  });
 
-  console.log(results);
+const results2 = replace.sync({
+  files: file,
+  from: `{
+          key: _vm.getValueKey(item),
+          attrs: {
+            closable: !_vm.selectDisabled,
+            size: _vm.collapseTagSize,
+            hit: item.hitState,
+            type: "info",
+            "disable-transitions": ""
+          },
+          on: {
+            close: function($event) {
+              _vm.deleteTag($event, item)
+            }
+          }
+        },`,
+  to: `{
+        key: _vm.getValueKey(item),
+        class:[item.tagOptions && item.tagOptions.className ? item.tagOptions.className:""],
+        attrs: {
+          closable: !_vm.selectDisabled,
+          size: _vm.collapseTagSize,
+          hit: item.hitState,
+          type: item.tagOptions && item.tagOptions.type ? item.tagOptions.type : "info",
+          "disable-transitions": ""
+        },
+        on: {
+          close: function($event) {
+            _vm.deleteTag($event, item)
+          }
+        }
+      },`,
+});
 
-})();
+console.log(results2);
+
 
 ```
-
