fix: 修改了几篇文章细节

--- a/source/_posts/5-笔记和复盘/读书笔记/发布-订阅模式.md
+++ b/source/_posts/5-笔记和复盘/读书笔记/发布-订阅模式.md
@@ -1,3 +1,4 @@
+```js
 /* ****************************************************************************************************
  *                                    发布订阅初版写法
  ************************************************************************************************* */
@@ -5,10 +6,19 @@
 // 定义售楼处
 const salesOffices = {
     clientList: new Map(), // 缓存列表，存放订阅者的回调函数
+    /**
+     * 增加订阅者
+     * @param {*} key 关心的指标
+     * @param {*} fn 回调函数
+     */
     listen: function (key, fn) { // 增加订阅者
         this.clientList.delete(key)
         this.clientList.set(key, fn)
     },
+    /**
+     * 发布通知
+     * @param {*} messageKey 指标名称
+     */
     trigger: function (messageKey) {
         const fn = this.clientList.get(messageKey)
 
@@ -42,3 +52,5 @@ salesOffices.listen('price', (price, squareMeter) => {
 
 salesOffices.trigger('area', 2000000); // 输出:2000000
 // salesOffices.trigger('squareMeter100', 3000000); // 输出:3000000
+
+```
