--- a/source/_posts/1-JavaScript/基础知识类/合并空值.md
+++ b/source/_posts/1-JavaScript/基础知识类/合并空值.md
@@ -3,11 +3,18 @@
 空值合并操作符 ?? 总是返回一个非空值
 
 ```js
-false ?? 'hello world' // false
+false ?? 'hello world'
+//=> false
 
-NaN ?? 'hello world' // NaN
+0 ?? 'a'
+//=> 0
 
-null ?? 'hello world' // hello world
+NaN ?? 'hello world'
+//=> NaN
 
-undefined ?? 'hello world' // hello world
+null ?? 'hello world'
+//=> hello world
+
+undefined ?? 'hello world'
+//=> hello world
 ```
