--- a/source/_posts/4-网络和算法和ts/网络和安全类/缓存.md
+++ b/source/_posts/4-网络和算法和ts/网络和安全类/缓存.md
@@ -1,6 +1,7 @@
 
 # 相关文章
 - [前端浏览器缓存知识梳理](https://juejin.cn/post/6947936223126093861)
+- [彻底弄懂强缓存与协商缓存](https://www.jianshu.com/p/9c95db596df5)
 
 
 
@@ -13,7 +14,7 @@
    2. cache-control
 
 
-2. 协商缓存（走服务器）
+2. 协商缓存（走服务器，进行有效性校验）
    1. last-modified/last-modified-since
    2. Etag/If-None-Match
 
@@ -25,9 +26,9 @@
 通常浏览器缓存策略分为两种：强缓存和协商缓存
 
 1、基本原理
-1）浏览器在加载资源时，根据请求头的 **expires** 和 **cache-control**判断是否命中强缓存，是则直接从缓存读取资源，不会发请求到服务器。
-2）如果没有命中强缓存，浏览器一定会发送一个请求到服务器，通过**last-modified** 和 **etag** 验证资源是否命中协商缓存，如果命中，服务器会将这个请求返回，但是不会返回这个资源的数据，依然是从缓存中读取资源
-3）如果前面两者都没有命中，直接从服务器加载资源
+   - 浏览器在加载资源时，根据请求头的 **expires** 和 **cache-control**判断是否命中强缓存，是则直接从缓存读取资源，不会发请求到服务器。
+   - 如果没有命中强缓存，浏览器一定会发送一个请求到服务器，通过**last-modified** 和 **etag** 验证资源是否命中协商缓存，如果命中，服务器会将这个请求返回，但是不会返回这个资源的数据，依然是从缓存中读取资源
+   - 如果前面两者都没有命中，直接从服务器加载资源
 
 2、相同点
 如果命中，都是从客户端缓存中加载资源，而不是从服务器加载资源数据；
@@ -39,7 +40,7 @@
 
 # 强缓存
 
-强缓存通过Expires和Cache-Control两种响应头实现
+强缓存通过 Expires 和 Cache-Control 两种响应头实现
 
 1、Expires
 Expires是http1.0提出的一个表示资源过期时间的header，它描述的是一个 **绝对时间**，由服务器返回。
