add: 添加ts的记录

--- a/source/_posts/2-框架和库/typescript/一些记录.md
+++ b/source/_posts/2-框架和库/typescript/一些记录.md
@@ -9,7 +9,7 @@
 
 1. typeof 检查类型
 
-可能的类型有：
+可能的类型有(八种):
  - "string"
  - "number"
  - "bigint"
@@ -18,6 +18,17 @@
  - "undefined"
  - "object"
  - "function"
+
+
+基本数据类型
+ - "string"
+ - "number"
+ - "bigint"
+ - "boolean"
+ - "symbol"
+ - "undefined"
+ - "object"
+ - "null"
 
 
 ```ts
@@ -30,7 +41,7 @@ const demo = (val: string | number) => {
 ```
 
 
-2. in 操作符检查复杂类型
+1. in 操作符检查复杂类型
 
 ```ts
 type Duck = { swim: () => {} };
