fix: 修改全文图片地址

--- a/source/_posts/1-JavaScript/专题/继承.md
+++ b/source/_posts/1-JavaScript/专题/继承.md
@@ -11,21 +11,21 @@
 
 <br>
 
-实现思想: 
+实现思想:
 
 <br>
 
-1. 原型链继承: 
+1. 原型链继承:
    1. 思想: 将 **子类型** 的 `prototype` 指向 **超类型的实例** ;
-2. 借用构造函数: 
+2. 借用构造函数:
    1. 思想: 通过 `call()` 或 `apply()`方法，在使用new操作符创建子类实例的时候，执行一遍超类型构造函数(⚠️，此时的this是指向实例的) (TO:看new创建函数的过程)
-3. 组合式继承: 
+3. 组合式继承:
    1. 思想: 使用原型链实现对 **原型方法** 的继承，而通过借用构造函数实现对 **原型属性的继承**, 从而解决了原型引用属性共享的问题，解决了了构造函数代码复用性差的问题；
-4. 原型式继承: 
+4. 原型式继承:
     1. 思想: 对给定的对象执行浅拷贝，并拷贝后的对象上自定义一些方法；
-5. 寄生式继承: 
+5. 寄生式继承:
    1. 思想: 与原型式继承相比，多了一个步骤 => 定义一个函数，在函数内部对浅拷贝的对象进行方法增强；
-6. 组合寄生式继承: 
+6. 组合寄生式继承:
    1. 思想: 与组合继承相比，就是把 `超类型.prototype.constructor = 子类型; 子类型.prototype = 超类型.prototype` 的过程，改为让`超类型的副本`去做;
 
 
@@ -59,7 +59,7 @@ console.log(Father.prototype.isPrototypeOf(instance1));
 console.log(Father.prototype.isPrototypeOf(instance2));
 ```
 
-<img src='/Blog/images/原型继承流程图.jpeg'> 
+<img src='/images/原型继承流程图.jpeg'>
 
 
 <br>
@@ -161,7 +161,7 @@ console.log(instance1.age);   // 25
 **总结:**
 
 1. 缺点：方法都在函数内部定义，代码复用性差；
-2. 优点：  
+2. 优点：
   1. 可向超类型传值；
   2. 可为子类型实例单独定义属性;
 
@@ -207,7 +207,7 @@ Son.prototype.sayAge = function() {
 
 
 // 测试
-const instance1 = new Son("Tom", 24); 
+const instance1 = new Son("Tom", 24);
 instance1.sayName(); // 'Tom'
 instance1.sayAge(); // 24
 instance1.colors.push("pink");
@@ -235,7 +235,7 @@ console.log(instance2.colors); // [ 'red', 'green', 'black' ]
    1. 结合原型链继承和借用构造函数继承;
    2. 解决原型链继承：实例引用类型属性共享 和 无法向超类型传值;
    3. 解决借用构造函数继承：代码不可复用问题;
-   4. 同时，instanceof 和isPrototypeOf() 也能够用于识别基于组合继承创建的对象； 
+   4. 同时，instanceof 和isPrototypeOf() 也能够用于识别基于组合继承创建的对象；
 2. 缺点：
    1. 无论什么情况下，都会调用两次超类型函数（详见组合式继承部分）；
 
@@ -346,7 +346,7 @@ function object(o) {
 
 function createAnother(original) {
   const clone = object(original); // 此处也可以使用Object.create(origial) 方法实现
-  
+
   // 在拷贝的新对象自定义一些想要的方法
   clone.sayHi = function() {
     console.log("hi");
@@ -355,7 +355,7 @@ function createAnother(original) {
 }
 
 // 这里得到的 `instance1` 和 `instance2` ，即是对person进行浅拷贝，并且自定义了一些方法后的一个对象，与person相比，多了自定的方法而已
-const instance1 = createAnother(person);  
+const instance1 = createAnother(person);
 const instance2 = createAnother(person);
 instance1.sayHi();
 // 修改实例1 的引用属性值
@@ -376,7 +376,7 @@ instance2.friends; // [ 'Herry', 'Merry', 'cat' ] // 改变了
 寄生组合式继承优点
   1. 高效：仅调用一次超类型构造函数，并且避免了在 Son.prototype上创建不必要的、多余的属性
   2. 原型链不变：
-  3. 还能正常使用 `instanceof` 和 `isPrototypeOf()` 
+  3. 还能正常使用 `instanceof` 和 `isPrototypeOf()`
 
 
 ```javascript
@@ -412,7 +412,7 @@ Son.prototype.sayAge = function() {
 // 使用
 const instance1 = new Son("Tom", 24); // 调用子类构造函数，
 const instance2 = new Son("Marry", 12);
- 
+
 ```
 
 **第一次调用超类型函数:** 发生创建 超类构造函数的实例，并将其赋值给 子类的prototype
@@ -438,7 +438,7 @@ const instance2 = new Son("Marry", 12);
 
 ```javascript
 /**
- * @des 
+ * @des
  * @param {Object} son 子类型构造函数
  * @param {Object} father 超类型构造函数
  */
@@ -474,7 +474,7 @@ function Son(name, age) {
   this.age = age;
 }
 
-// 4. (Father.prototype)的副本.constructor => Son; 
+// 4. (Father.prototype)的副本.constructor => Son;
 //                          Son.prototype => Father.prototype的副本
 inheritPrototype(Son, Father)
 
