--- a/source/_posts/6-面试准备/ready/执行上下文+作用域链+闭包.md
+++ b/source/_posts/6-面试准备/ready/执行上下文+作用域链+闭包.md
@@ -97,7 +97,7 @@ function createComparisonFunction(propertyName) {
 ```
 - 闭包的作用域链（如下图）
 
-<img src="/Blog/images/闭包作用域链.png" title="createComparisonFunction和内部函数的作用域链" width="70%" height="50%">
+<img src="/images/闭包作用域链.png" title="createComparisonFunction和内部函数的作用域链" width="70%" height="50%">
 
 
 
