--- a/source/_posts/7-日记/2021/冷门属性.md
+++ b/source/_posts/7-日记/2021/冷门属性.md
@@ -9,7 +9,7 @@
 <div contenteditable="true">这是一个可编辑的div标签</div>
 ```
 
-<img src='/Blog/images/contenteditable-demo.png' />
+<img src='/images/contenteditable-demo.png' />
 
 
 [测试地址](https://jsbin.com/danidaqofu/edit?html,css)
@@ -41,7 +41,7 @@ input.cccc {
 ```
 
 
-<img src='/Blog/images/caret-color.png' />
+<img src='/images/caret-color.png' />
 
 
 [测试地址](https://jsbin.com/qojuxolatu/edit?html,css,output)
@@ -51,7 +51,7 @@ input.cccc {
 ## ::after: 可以
 
 
-<img src='/Blog/images/after-demo.png' />
+<img src='/images/after-demo.png' />
 
 
 [测试地址](https://jsbin.com/qivukekocu/edit?html,css,output)
