fix: 修改了前端汇总

--- a/source/_posts/1-JavaScript/基础知识类/数组.md
+++ b/source/_posts/1-JavaScript/基础知识类/数组.md
@@ -1,4 +1,18 @@
 
+```js
+
+/* 虽然demo并没有定义get_status方法，但是通过 apply 方法，他可以使用Quo 的 get_status*/
+// eg.1
+const Quo = {
+ get_status: function() {
+ return this.status;
+ }
+};
+const demo = {
+ status: "finally"
+};
+Quo.get_status.apply(demo); // finally
+```
 ## 数组解构赋值
 
 
@@ -18,7 +32,7 @@ let [x, , z] = ["pig", "cat", "dog"]; // x,z 分别正确拿到 'pig'，'dog'
 let [x, y, z] = ["pig", "cat", "dog"]; //x,y,c分别正确拿到'pig','cat','dog'
 // 不完全解构
 let [x, [y], d] = ["pig", ["cat", "cow"], "dog"]; //
-``` 
+```
 
 
 情况二：搭配...运算符
@@ -89,7 +103,7 @@ console.log(items1) //1,2,3
 function add(...items1){
     console.log(arguments)
 }
-add(...items1)   
+add(...items1)
 
     // 例2 >> 合并数组
     var items2 = [4,5]
@@ -124,7 +138,7 @@ add(...items1)
 1.（可选）参数2：用来对每个元素进行处理，将处理后的值放入返回的数组；
 1.（条件）参数3：map函数里用到this关键字，还可以传入Array.from的第三个参数,用力啊绑定this。
 
-**使用举例**：  
+**使用举例**：
 
 ```javascript
     // 例1 >> 对数组中每一项做运算
@@ -138,7 +152,7 @@ add(...items1)
 
     // 例3 >> 将字符串转为数组
     Array.from('hello')              // [ 'h', 'e', 'l', 'l', 'o' ]
-```  
+```
 
 
 
@@ -166,7 +180,7 @@ Array.of()       //[]
 
 
 
-## copyWithin()  
+## copyWithin()
 
 将指定位置的成员，复制到其他位置，并覆盖原有成员，然后返回当前数组
 参数：
@@ -194,7 +208,7 @@ Array.of()       //[]
     - Array.find()
         - （必选）回调函数：依次接受三个参数 >>当前的值value，当前的位置index，原数组arr
         - （可选）绑定回调函数的this对象
-    - Array.findIndex() >> 
+    - Array.findIndex() >>
         - （必选）回调函数：依次接受三个参数 >>当前的值value，当前的位置index，原数组arr
         - （可选）绑定回调函数的this对象
 - **使用举例**：
@@ -226,7 +240,7 @@ Array.of()       //[]
     - （必选）给定值
     - （可选）：指定填充的起始位置
     - （可选）：指定填充的结束位置
-- **使用举例**：  
+- **使用举例**：
 ```javascript
     // 例1 >>
     [1, 2, 3, 4, 5].fill(100,2,3)     //[1,2,100,4,5] ,用100替换，从位置2开始到位置3结束[)
@@ -239,12 +253,12 @@ Array.of()       //[]
 
 
 ## 数组实例的方法entries()，keys() 和 values()
-- **作用**：带有Iterator接口的对象，使用`for...of`循环或手动调用遍历器对象的next方法进行遍历。  
-- **区别**：  
+- **作用**：带有Iterator接口的对象，使用`for...of`循环或手动调用遍历器对象的next方法进行遍历。
+- **区别**：
     - entries()：遍历键值对；
     - keys()：遍历键；
     - values()：遍历值；
-- **使用举例**：  
+- **使用举例**：
 ```javascript
     var a = [{name:"xiaoli"},{age:"34"}]
     for(let item of a.entries()){
@@ -257,7 +271,7 @@ Array.of()       //[]
 
 
 
-## Array.includes()  
+## Array.includes()
 - 作用：表示某个数组是否包含给定的值，返回一个布尔值。
 - 使用举例
 ```javascript
@@ -277,11 +291,11 @@ Array.of()       //[]
 - 参数：
     - Array.flat():
         - 参数为数字，表示拉平的层数，若为Infinity则不管多少层全拉平
-    - Array.flatMap()  
+    - Array.flatMap()
         - 参数为回调函数：表示对数组的每项所执行的操作，仅拉平一层
 - 使用举例
 ```javascript
-    // 例1 >> 
+    // 例1 >>
     [1,2,[3,[4,5]]].flat() //[1,2,3,[4,5]]
     [1,2,[3,[4,5]]].flat(2) //[1,2,3,4,5]
 
