fix: 修改了继承的文章结构

--- a/source/_posts/1-Javascript基础/继承.md
+++ b/source/_posts/1-Javascript基础/继承.md
@@ -11,26 +11,16 @@
 
 <br>
 
-实现思想:
 
-<br>
-
-1. 原型链继承:
-   1. 思想: 将 **子类型** 的 `prototype` 指向 **超类型的实例** ;
-2. 借用构造函数:
-   1. 思想: 通过 `call()` 或 `apply()`方法，在使用new操作符创建子类实例的时候，执行一遍超类型构造函数(⚠️，此时的this是指向实例的) (TO:看new创建函数的过程)
-3. 组合式继承:
-   1. 思想: 使用原型链实现对 **原型方法** 的继承，而通过借用构造函数实现对 **原型属性的继承**, 从而解决了原型引用属性共享的问题，解决了了构造函数代码复用性差的问题；
-4. 原型式继承:
-    1. 思想: 对给定的对象执行浅拷贝，并拷贝后的对象上自定义一些方法；
-5. 寄生式继承:
-   1. 思想: 与原型式继承相比，多了一个步骤 => 定义一个函数，在函数内部对浅拷贝的对象进行方法增强；
-6. 组合寄生式继承:
-   1. 思想: 与组合继承相比，就是把 `超类型.prototype.constructor = 子类型; 子类型.prototype = 超类型.prototype` 的过程，改为让`超类型的副本`去做;
 
 
 
 ## 原型链继承
+
+
+
+<details>
+<summary>click here</summary>
 
 **实现方法**：将子类型的prototype 指向 ==超类型的实例==；
 
@@ -97,8 +87,16 @@ console.log(instance2.colors); // [ 'red', 'green', 'black' ]
 
 
 
+</details>
+
+
+
+
 ## 借用构造函数继承
 
+
+<details>
+<summary>click here</summary>
 **实现思想**：通过 `call()` 或 `apply()`方法，在（将来）新创建的对象上执行超类型构造函数；
 
 - 我们实际上是在新创建的 `Son` 实例的环境中，**调用了 `Father` 构造函数**；
@@ -168,10 +166,15 @@ console.log(instance1.age);   // 25
 综上: 借用构造函数的方法也很少单独使用
 
 
+</details>
+
+
 
 
 ## 组合继承
 
+<details>
+<summary>click here</summary>
 
 ==结合原型链继承== 和 ==借用构造函数继承==, 发挥二者之长
 
@@ -243,11 +246,15 @@ console.log(instance2.colors); // [ 'red', 'green', 'black' ]
 综上: 组合式继承也是较常用的继承方法；
 
 
+</details>
 
 
 
 ## 原型式继承
 
+
+<details>
+<summary>click here</summary>
 
 
 **初代版本**： 借助原型可以基于已有的对象创建新对象，同时还不必因此创建自定义类型；
@@ -320,9 +327,14 @@ console.log(instance2.friends); // [ 'Herry', 'Merry', 'cat' ]
 ```
 
 
+</details>
+
+
 
 ## 寄生式继承
 
+<details>
+<summary>click here</summary>
 *实现思路*：创建一个仅用于封装继承过程的函数，在函数内部以某种方式增强对象，最后返回对象；
 
 感觉这种方法没什么优点，实例的引用类型值共享也没解决，函数复用效率也低；
@@ -365,9 +377,16 @@ instance1.friends.push("cat");
 instance2.friends; // [ 'Herry', 'Merry', 'cat' ] // 改变了
 ```
 
+</details>
+
 
 ## 寄生组合式继承 -- 最理想的继承范式
 
+
+
+
+<details>
+<summary>click here</summary>
 寄生组合式继承，即，通过借用 ==构造函数来继承属性==，通过==原型链的混成形式==来继承方法
 不必为了指定子类型的原型而调用超类型的构造函数，我们所需要的无非就是超类型原型的一个副本
 
@@ -485,9 +504,36 @@ Son.prototype.sayAge = function() {
 
 ```
 
+</details>
 
 ## Class继承（详见Class篇）
 
 
 ## 参考
-- 《JavaScript高级程序设计-第六章 6.3 继承》
+- 《JavaScript高级程序设计-第八章 8.3 继承》
+
+
+
+
+
+<!--
+实现思想:
+
+<br>
+
+1. 原型链继承:
+   1. 思想: 将 **子类型** 的 `prototype` 指向 **超类型的实例** ;
+2. 借用构造函数:
+   1. 思想: 通过 `call()` 或 `apply()`方法，在使用new操作符创建子类实例的时候，执行一遍超类型构造函数(⚠️，此时的this是指向实例的) (TO:看new创建函数的过程)
+3. 组合式继承:
+   1. 思想: 使用原型链实现对 **原型方法** 的继承，而通过借用构造函数实现对 **原型属性的继承**, 从而解决了原型引用属性共享的问题，解决了了构造函数代码复用性差的问题；
+4. 原型式继承:
+    1. 思想: 对给定的对象执行浅拷贝，并拷贝后的对象上自定义一些方法；
+5. 寄生式继承:
+   1. 思想: 与原型式继承相比，多了一个步骤 => 定义一个函数，在函数内部对浅拷贝的对象进行方法增强；
+6. 组合寄生式继承:
+   1. 思想: 与组合继承相比，就是把 `超类型.prototype.constructor = 子类型; 子类型.prototype = 超类型.prototype` 的过程，改为让`超类型的副本`去做;
+
+
+
+ -->
