fix: 修改防抖节流的演示到md文件内

--- a/source/_posts/1-Javascript基础/防抖和节流.md
+++ b/source/_posts/1-Javascript基础/防抖和节流.md
@@ -127,3 +127,95 @@ function throttle(func, wait) {
 
 - 参考文章：https://github.com/mqyqingfeng/Blog/issues/22
 - 参考文章：https://github.com/mqyqingfeng/Blog/issues/26
+
+
+
+
+
+
+<style>
+  #demo-wrapper {
+    /* position: absolute: */
+    /* top: 30px; */
+  }
+  div.content {
+    width: 100%;
+    height: 200px;
+    line-height: 200px;
+    text-align: center;
+    color: #fff;
+    font-size: 30px;
+    margin-top: 30px;
+  }
+  #debounceDiv {
+    background-color: #f5c160;
+  }
+  #throttleDiv {
+    background-color: #e4980d;
+  }
+</style>
+
+
+<div id="demo-wrapper">
+
+
+
+
+
+
+   <h3>防抖测试块</h3>
+    <p>高频事件在规定的时间内仅执行一次，若规定时间内再次触发，则重新计算时间</p>
+    <div class="content" id="debounceDiv"></div>
+    <h3>节流测试块</h3>
+    <p>高频事件在规定的时间内不管触发多少次，都只触发一次</p>
+    <div class="content" id="throttleDiv"></div>
+
+    <script>
+      let count = 1;
+      const debounceDiv = document.getElementById("debounceDiv");
+
+      function getUserAction() {
+        debounceDiv.innerHTML = count++;
+      }
+
+      function debounce(func, wait = 1000) {
+        let timeout;
+
+        return function(event) {
+          console.log("清除计时器");
+          clearTimeout(timeout);
+          timeout = setTimeout(() => {
+            func.call(this, event);
+          }, wait);
+        };
+      }
+
+      debounceDiv.onmousemove = debounce(getUserAction);
+    </script>
+
+    <script>
+      let throttleCount = 1;
+      const throttleDiv = document.getElementById("throttleDiv");
+
+      function getUserAction() {
+        throttleDiv.innerHTML = throttleCount++;
+      }
+
+      function throttle(func, wait = 1000) {
+        let context, args;
+        let previous = 0;
+
+        return function() {
+          var now = +new Date();
+          context = this;
+          args = arguments;
+          if (now - previous > wait) {
+            func.apply(context, args);
+            previous = now;
+          }
+        };
+      }
+
+      throttleDiv.onmousemove = throttle(getUserAction);
+    </script>
+</div>
