fix: 隐藏面试文件夹名录

--- a/source/_posts/1-Javascript基础/继承.md
+++ b/source/_posts/1-Javascript基础/继承.md
@@ -11,6 +11,10 @@
 
 <br>
 
+继承是面向对象的语言中经常讨论的一个话题，很多面向对象的语言都支持两种继承，接口继承和实现继承，前者只继承方法签名，后者继承实际的方法;
+
+在js中，接口继承是不可能的，因为js中没有函数签名，实现继承是js唯一支持的继承方式，而js实现继承的方式是通过原型链;
+
 
 
 
@@ -21,6 +25,12 @@
 
 <details>
 <summary>click here</summary>
+
+EMCA-262把原型链定义为EMCAScript的主要继承方式;
+
+将原型链是什么？重温一下构造函数，原型，实例之间的关系：即所有的构造函数都会有一个prototype属性，而原型对象也都有一个属性constructor指向构造函数，所有的实例都有一个内部指针(\_\_proto\_\_)指向原型；如果这个原型是另一个构造函数的实例呢？那这个原型内部也会有一个指针(\_\_proto\_\_)指向他的原型，由此，就在实例和原型之间构造了一条原型链。
+
+
 
 **实现方法**：将子类型的prototype 指向 ==超类型的实例==；
 
