fix: 加了个换行

--- a/source/_posts/1-Javascript基础/继承.md
+++ b/source/_posts/1-Javascript基础/继承.md
@@ -28,7 +28,8 @@
 
 EMCA-262把原型链定义为EMCAScript的主要继承方式;
 
-将原型链是什么？重温一下构造函数，原型，实例之间的关系：即所有的构造函数都会有一个prototype属性，而原型对象也都有一个属性constructor指向构造函数，所有的实例都有一个内部指针(\_\_proto\_\_)指向原型；如果这个原型是另一个构造函数的实例呢？那这个原型内部也会有一个指针(\_\_proto\_\_)指向他的原型，由此，就在实例和原型之间构造了一条原型链。
+原型链是什么？
+重温一下构造函数，原型，实例之间的关系：即所有的构造函数都会有一个prototype属性，而原型对象也都有一个属性constructor指向构造函数，所有的实例都有一个内部指针(\_\_proto\_\_)指向原型；如果这个原型是另一个构造函数的实例呢？那这个原型内部也会有一个指针(\_\_proto\_\_)指向他的原型，由此，就在实例和原型之间构造了一条原型链。
 
 
 
