fix: 修改了继承

--- a/source/_posts/1-Javascript基础/继承.md
+++ b/source/_posts/1-Javascript基础/继承.md
@@ -23,19 +23,17 @@
 
 
 
-<details>
+<details open>
 <summary>click here</summary>
 
 EMCA-262把原型链定义为EMCAScript的主要继承方式;
 
 原型链是什么？
-重温一下构造函数，原型，实例之间的关系：即所有的构造函数都会有一个prototype属性，而原型对象也都有一个属性constructor指向构造函数，所有的实例都有一个内部指针(\_\_proto\_\_)指向原型；如果这个原型是另一个构造函数的实例呢？那这个原型内部也会有一个指针(\_\_proto\_\_)指向他的原型，由此，就在实例和原型之间构造了一条原型链。
+重温一下构造函数，原型，实例之间的关系：即所有的**构造函数**都会有一个**prototype**属性，而原型对象也都有一个属性**constructor指**向构造函数，所有的实例都有一个内部指针(\_\_proto\_\_)指向原型；如果这个原型是另一个构造函数的实例呢？那这个原型内部也会有一个指针(\_\_proto\_\_)指向他的原型，由此，就在实例和原型之间构造了一条原型链。
 
+根据原型链的特性，我们可以将 子类型的**prototype** 指向 **超类型的实例**
 
-
-**实现方法**：将子类型的prototype 指向 ==超类型的实例==；
-
-这样，子类型就能够访问超类型的所有属性和方法
+这样，子类型就能够通过原型链查找，访问超类型的所有属性和方法
 
 ```javascript
 /* 原型链继承 */
@@ -69,7 +67,7 @@ console.log(Father.prototype.isPrototypeOf(instance2));
 
 **原型链继承问题1**，包含引用类型值的原型，包含引用类型值的原型属性会被所有实例共享；
 
-在通过原型实现继承时，原型实际上会变成另一个类型的实例，于是，原先的实例属性`(new Father()的属性)`也就变成现在的原型属性`instance1和instance2的原型属性`了
+在通过原型链实现继承时，原型实际上会变成另一个类型的实例，于是，原先的实例属性`(new Father()的属性)`也就变成现在的原型属性`instance1和instance2的原型属性`了
 
 <br>
 
