--- a/source/_posts/1-JavaScript基础/继承.md
+++ b/source/_posts/1-JavaScript基础/继承.md
@@ -1,15 +1,6 @@
 # 继承相关
 
-实现继承的方法有
-1. 原型链继承
-2. 借用构造函数
-3. 组合式继承
-4. 原型式继承
-5. 寄生式继承
-6. 组合寄生式继承
-7. ES6 类继承
 
-<br>
 
 继承是面向对象的语言中经常讨论的一个话题，很多面向对象的语言都支持两种继承，接口继承和实现继承，前者只继承方法签名，后者继承实际的方法;
 
@@ -23,7 +14,7 @@
 
 
 
-<details open>
+<details>
 <summary>click here</summary>
 
 EMCA-262把原型链定义为EMCAScript的主要继承方式;
@@ -101,23 +92,19 @@ console.log(instance2.colors); // [ 'red', 'green', 'black' ]
 
 
 
-## 借用构造函数继承
+## 盗用构造函数继承
 
 
-<details>
+<details Open>
 <summary>click here</summary>
-**实现思想**：通过 `call()` 或 `apply()`方法，在（将来）新创建的对象上执行超类型构造函数；
 
-- 我们实际上是在新创建的 `Son` 实例的环境中，**调用了 `Father` 构造函数**；
-- 这样一来，就会在 `Son` 对象上执行 `Father` 函数中定义的所有对象初始化代码；
-- 结果，每个 `Son` 的实例都会拥有自己的 `colors`属性 的副本了
+> 为了解决原型包含引用类型导致的变量共享的问题，出现一种盗用构造函数实现继承的方式. 基本思路很简单：就是在子类构造函数中调用父类构造函数。因为毕竟函数就是在特定构造函数执行代码的简单对象，所以可以使用 `call` 或者 `apply` 方法，以新创建的对象为上下文执行父类构造函数。
 
 
 
 
 ```javascript
 
-/* 借用构造函数实现继承 */
 // 定义超类型构造函数
 function Father() {
   this.colors = ["res", "green"];
@@ -131,12 +118,10 @@ function Son() {
   Father.call(this);
 }
 
-// 使用new操作符，创建Son的实例
-const instance1 = new Son();
+ const instance1 = new Son();
 const instance2 = new Son();
 
-// 修改 instance1 的colors 属性
-instance1.colors.push("pink");
+ instance1.colors.push("pink");
 instance2.colors        // ["res", "green"]
 // 发现 instance2.colors 属性值并未受影响，解决了原型继承时，引用类型所带来的实例共享问题
 
@@ -167,12 +152,14 @@ console.log(instance1.age);   // 25
 
 **总结:**
 
-1. 缺点：方法都在函数内部定义，代码复用性差；
-2. 优点：
-  1. 可向超类型传值；
-  2. 可为子类型实例单独定义属性;
+1. 缺点：
+   1. 必须在构造函数中定义方法，因为函数不能重用;
+   2. 子类无法访问定义在父类上的方法;
+2. 优点 :
+   1. 可向超类型传值；
+   2. 可为子类型实例单独定义属性;
 
-综上: 借用构造函数的方法也很少单独使用
+所以, 借用构造函数的方法也很少单独使用
 
 
 </details>
@@ -185,60 +172,37 @@ console.log(instance1.age);   // 25
 <details>
 <summary>click here</summary>
 
-==结合原型链继承== 和 ==借用构造函数继承==, 发挥二者之长
+组合继承(又称为伪经典继承), 组合了原型继承和盗用构造函数继承的优点，实现方法是使用原型链继承方法，使用盗用构造函数继承属性; 这样既可以讲方法放在原型上实现复用，同时实例又可以拥有自己的属性；
 
-**实现思路**: 使用原型链实现对 ==原型方法== 的继承，而通过借用构造函数实现对 ==原型属性的继承==
+
 
 
 ```javascript
 
-/* 组合继承 */
-// 代码实现
-function Father(name) {
+function Super(name) {
   this.name = name;
-  this.colors = ["red", "green"];
 }
 
-Father.prototype.sayName = function() {
+function Sub(name) {
+  Super.call(this, name);
+}
+
+Sub.prototype = new Super();
+Sub.prototype.constructor = Sub; // 保证原型链
+
+
+Sub.prototype.sayName = function () {
   console.log(this.name);
 };
 
-function Son(name, age) {
-  Father.call(this, name);  // ！！！：第二次调用超类型函数
-  this.age = age;
-}
+const instance1 = new Sub("instance1");
+const instance2 = new Sub("instance2");
 
-// 继承方法
-Son.prototype = new Father(); // Son 的原型指向 Father的实例，// ！！！：第一次调用超类型函数
-Son.prototype.constructor = Son;
+instance1.sayName();
+instance2.sayName();
 
-Son.prototype.sayAge = function() {
-  console.log(this.age);
-};
-
-
-
-// 测试
-const instance1 = new Son("Tom", 24);
-instance1.sayName(); // 'Tom'
-instance1.sayAge(); // 24
-instance1.colors.push("pink");
-console.log(instance1.colors); // [ 'red', 'green', 'pink' ]
-
-const instance2 = new Son("Marry", 12);
-instance2.sayName(); // 'Marry'
-instance2.sayAge(); // 12
-instance2.colors.push("black");
-console.log(instance2.colors); // [ 'red', 'green', 'black' ]
 
 ```
-
-1. 在该例子中，Father 构造函数定义了 ==两个属性==： name和colors, Father的原型定义了一个==方法== sayName().
-2. Son 构造函数在调用 Father 构造函数时传入了name 参数，紧接着又定义了自己的属性 age;
-3. 然后，将 Father 的实例赋值给 Son 的原型；
-4. 然后，又在该新原型上定义了方法 sayAge()
-5. 这样一来，就可以让两个不同的 Son 实例，分别拥有自己的属性————包括colros属性，
-
 
 
 总结
@@ -247,7 +211,7 @@ console.log(instance2.colors); // [ 'red', 'green', 'black' ]
    1. 结合原型链继承和借用构造函数继承;
    2. 解决原型链继承：实例引用类型属性共享 和 无法向超类型传值;
    3. 解决借用构造函数继承：代码不可复用问题;
-   4. 同时，instanceof 和isPrototypeOf() 也能够用于识别基于组合继承创建的对象；
+   4. 同时，instanceof 和 isPrototypeOf() 也能够用于识别基于组合继承创建的对象；
 2. 缺点：
    1. 无论什么情况下，都会调用两次超类型函数（详见组合式继承部分）；
 
@@ -265,6 +229,9 @@ console.log(instance2.colors); // [ 'red', 'green', 'black' ]
 <details>
 <summary>click here</summary>
 
+原型继承，实现思路就是创建另一个对象的副本
+以前是通过创建一个新的对象
+
 
 **初代版本**： 借助原型可以基于已有的对象创建新对象，同时还不必因此创建自定义类型；
 本质上，是对传入的对象执行了一次浅拷贝
@@ -281,7 +248,13 @@ function object(o) {
   F.prototype = o;
   return new F();
 }
+```
 
+object 在函数内部创建一个新的函数，将传入的对象赋值给新创建函数的 prototype 属性，返回这个新函数的实例;
+
+
+
+```javascript
 // 定义 被继承对象
 const person = {
   name: "Tom",
@@ -304,11 +277,8 @@ console.log(instance2.friends); // [ 'Herry', 'Merry', 'cat' ]
 
 
 
-**现代实现方法**：ES5的 Object.create()；
 
-- 该对象接收两个参数：一个用做新对象原型的对象，（可选）一个为新对象定义额外属性的对象；
-- 在只想让一个对象与另一个对象保持类似的情况下，使用原型继承即可；
-- 不过，请注意，包含引用类型值的属性始终都会共享相应的值；
+ES5，通过增加 Object.create() 方法将原型式继承的概念规范化了。这个方法接收两个对象，作为新对象原型的对象，以及给新对象定义额外属性的对象(参数二可选)。以传入参数二的方式定义新属性的方式，会遮蔽原型上的同名属性。
 
 
 
@@ -323,9 +293,7 @@ const person = {
 };
 
 // 创建对象A的实例，并定义实例自己的属性
-const instance1 = Object.create(person, {
-  sisters: ["hua", "miao"]
-});
+const instance1 = Object.create(person, { sisters: ["miao"] });
 const instance2 = Object.create(person);
 
 // 修改实例1 的引用属性值
@@ -335,7 +303,6 @@ instance1.friends.push("cat");
 console.log(instance2.friends); // [ 'Herry', 'Merry', 'cat' ]
 ```
 
-
 </details>
 
 
@@ -344,9 +311,9 @@ console.log(instance2.friends); // [ 'Herry', 'Merry', 'cat' ]
 
 <details>
 <summary>click here</summary>
-*实现思路*：创建一个仅用于封装继承过程的函数，在函数内部以某种方式增强对象，最后返回对象；
 
-感觉这种方法没什么优点，实例的引用类型值共享也没解决，函数复用效率也低；
+*实现思路*：在函数内部创建一个新函数，并继承自传入的参数对象， 然后在函数内部为新创建的函数增加方法、属性等对其进行增强，最后返回这个对象。
+
 
 ```javascript
 
@@ -366,9 +333,9 @@ function object(o) {
 }
 
 function createAnother(original) {
-  const clone = object(original); // 此处也可以使用Object.create(origial) 方法实现
+  const clone = Object.create(original);
 
-  // 在拷贝的新对象自定义一些想要的方法
+  // 对新对象增强
   clone.sayHi = function() {
     console.log("hi");
   };
@@ -389,79 +356,22 @@ instance2.friends; // [ 'Herry', 'Merry', 'cat' ] // 改变了
 </details>
 
 
+
+
 ## 寄生组合式继承 -- 最理想的继承范式
-
-
 
 
 <details>
 <summary>click here</summary>
-寄生组合式继承，即，通过借用 ==构造函数来继承属性==，通过==原型链的混成形式==来继承方法
-不必为了指定子类型的原型而调用超类型的构造函数，我们所需要的无非就是超类型原型的一个副本
-
-**基本思路**：使用寄生式继承来继承超类型的原型，然后再将结果指定给子类型的原型；
-
-寄生组合式继承优点
-  1. 高效：仅调用一次超类型构造函数，并且避免了在 Son.prototype上创建不必要的、多余的属性
-  2. 原型链不变：
-  3. 还能正常使用 `instanceof` 和 `isPrototypeOf()`
 
 
-```javascript
-
-/* 组合继承 */
-// 实现
-// 定义超类型构造函数
-function Father(name) {
-  this.name = name;
-  this.colors = ["red", "green"];
-}
-
-// 在超类型的原型上定义方法
-Father.prototype.sayName = function() {
-  console.log(this.name);
-};
-
-// 定义子类型构造函数
-function Son(name, age) {
-+  Father.call(this, name);  // 第二次调用超类型函数
-  this.age = age;
-}
-
-+ Son.prototype = new Father(); // 第一次调用超类型函数
-Son.prototype.constructor = Son;
-
-// 在子类型的原型上添加方法
-Son.prototype.sayAge = function() {
-  console.log(this.age);
-};
+组合继承实际上存在效率问题，最主要的效率问题是，父类构造函数始终会被调用至少两次，一次是为子类构造函数创建原型函数时，另一次是调用子类构造函数时
 
 
-// 使用
-const instance1 = new Son("Tom", 24); // 调用子类构造函数，
-const instance2 = new Son("Marry", 12);
+在回一下 组合继承， 利用 原型链继承方法，利用 盗用构造函数 继承属性;
+而利用原型链继承方法的实现，就是创建原型的实例，并将改实例赋值给子类的 prototype;
 
-```
-
-**第一次调用超类型函数:** 发生创建 超类构造函数的实例，并将其赋值给 子类的prototype
-- Son.prototype 得到两个属性 ：`name` 和`colors`, 他们都是Father的实例属性，只不过现在位于 Son 的原型中
-
-**第二次调用超类型函数发生在:** 当调用 构造函数 `Son` 的时候
-- 会再一次调用 构造函数 `Father`, 这次是为新对象创建了实例属性 `name` 和`colors`
-
-<br>
-
-也就是说，有两组 `name` 和`colors` 属性，一组在实例上，一组在 Son原型中，这就是调用两次Father 构造函数的结果
-
-<br>
-<br>
-
-
-**寄生组合继承的基本模式如下：**
-
-
-**首先**，创建函数 `inheritPrototype`,
-该函数创建超类型原型的副本，为副本添加 `constructor` 属性并指向子类型，子类型的原型指向该副本
+而寄生组合式继承，实现思路是将 这个利用原型链继承方法的步骤，改为创建父类原型的副本, 并重新构建子类和父类原型的副本之间的原型链关系 大概代码如下:
 
 
 ```javascript
@@ -484,33 +394,13 @@ function inheritPrototype(son, father) {
 
 
 ```javascript
-/* 寄生组合式继承 */
-// 1. 定义超类型构造函数
-function Father(name) {
-  this.name = name;
-  this.colors = ["red", "green"];
+function Super(name) {
+  this.name = 'name'
 }
 
-// 2. 在超类型的原型上定义方法
-Father.prototype.sayName = function() {
-  console.log(this.name);
-};
+function Son(params) {
 
-//3.  定义子类型构造函数
-function Son(name, age) {
-  Father.call(this, name);  // 第二次调用超类型函数
-  this.age = age;
 }
-
-// 4. (Father.prototype)的副本.constructor => Son;
-//                          Son.prototype => Father.prototype的副本
-inheritPrototype(Son, Father)
-
-// 5. 在子类型的原型上添加方法
-Son.prototype.sayAge = function() {
-  console.log(this.age);
-};
-
 ```
 
 </details>
@@ -524,25 +414,3 @@ Son.prototype.sayAge = function() {
 
 
 
-
-<!--
-实现思想:
-
-<br>
-
-1. 原型链继承:
-   1. 思想: 将 **子类型** 的 `prototype` 指向 **超类型的实例** ;
-2. 借用构造函数:
-   1. 思想: 通过 `call()` 或 `apply()`方法，在使用new操作符创建子类实例的时候，执行一遍超类型构造函数(⚠️，此时的this是指向实例的) (TO:看new创建函数的过程)
-3. 组合式继承:
-   1. 思想: 使用原型链实现对 **原型方法** 的继承，而通过借用构造函数实现对 **原型属性的继承**, 从而解决了原型引用属性共享的问题，解决了了构造函数代码复用性差的问题；
-4. 原型式继承:
-    1. 思想: 对给定的对象执行浅拷贝，并拷贝后的对象上自定义一些方法；
-5. 寄生式继承:
-   1. 思想: 与原型式继承相比，多了一个步骤 => 定义一个函数，在函数内部对浅拷贝的对象进行方法增强；
-6. 组合寄生式继承:
-   1. 思想: 与组合继承相比，就是把 `超类型.prototype.constructor = 子类型; 子类型.prototype = 超类型.prototype` 的过程，改为让`超类型的副本`去做;
-
-
-
- -->
