fix: 修改了继承

--- a/source/_posts/1-Javascript基础/继承.md
+++ b/source/_posts/1-Javascript基础/继承.md
@@ -368,8 +368,7 @@ instance2.friends; // [ 'Herry', 'Merry', 'cat' ] // 改变了
 组合继承实际上存在效率问题，最主要的效率问题是，父类构造函数始终会被调用至少两次，一次是为子类构造函数创建原型函数时，另一次是调用子类构造函数时
 
 
-在回一下 组合继承， 利用 原型链继承方法，利用 盗用构造函数 继承属性;
-而利用原型链继承方法的实现，就是创建原型的实例，并将改实例赋值给子类的 prototype;
+回忆一下 组合继承的实现: 利用 **原型链继承方法** ，利用 **盗用构造函数继承属性**; 而利用原型链继承方法的具体代码实现，就是创建原型的实例，并将该实例赋值给子类的 prototype;
 
 而寄生组合式继承，实现思路是将 这个利用原型链继承方法的步骤，改为创建父类原型的副本, 并重新构建子类和父类原型的副本之间的原型链关系 大概代码如下:
 
