fix: 修改了继承

--- a/source/_posts/1-Javascript基础/继承.md
+++ b/source/_posts/1-Javascript基础/继承.md
@@ -365,7 +365,7 @@ instance2.friends; // [ 'Herry', 'Merry', 'cat' ] // 改变了
 <summary>click here</summary>
 
 
-组合继承实际上存在效率问题，最主要的效率问题是，父类构造函数始终会被调用至少两次，一次是为子类构造函数创建原型函数时，另一次是调用子类构造函数时
+组合继承实际上存在效率问题，最主要的效率问题是，父类构造函数始终会被调用至少两次，一次是为子类构造函数创建原型函数时，另一次是调用子类构造函数时; 另外一个问题是，在父类上定义的属性，同时存在于子类构造函数的原型 和 子类实例上;
 
 
 回忆一下 组合继承的实现: 利用 **原型链继承方法** ，利用 **盗用构造函数继承属性**; 而利用原型链继承方法的具体代码实现，就是创建原型的实例，并将该实例赋值给子类的 prototype;
@@ -393,14 +393,30 @@ function inheritPrototype(son, father) {
 
 
 ```javascript
-function Super(name) {
-  this.name = 'name'
+function Super(name) {}
+
+Super.prototype.sayHello = function () {
+  console.log('Hello Hello!')
 }
 
-function Son(params) {
-
+function Son(name) {
+  Super.call(this, name);
+  this.name = name
 }
+
+inheritPrototype(Son, Super);
+
+Son.prototype.sayName = function(name) {
+  console.log(this.name)
+}
+
+const instance1 = new Son('Tom');
+const instance2 = new Son('Lucus');
+
 ```
+
+
+
 
 </details>
 
