--- a/source/_posts/1-Javascript基础/防抖和节流.md
+++ b/source/_posts/1-Javascript基础/防抖和节流.md
@@ -3,12 +3,23 @@
 => [测试地址](https://jsbin.com/rebucuputi/edit?html,css,output)
 
 
+提到防抖、节流，我们常常会背概念`高频事件在规定的时间只执行一次，如规定的时间内再次触发，则重新计算时间`, 背概念的缺点就是很容易虽然常用但是被问到就记混乱，其实知识的学习结合业务场景，思考其命名就很简单很多
 
 ## 防抖
 
-高频事件在规定的事件只执行一次，如规定的时间内再次触发，则重新计算时间
+想象一个业务场景，根据用户input的输入进行查询数据，并将数据渲染出列表，如果我们在用户每次的onChange都查询，数据每次返回都去渲染列表，如果容器没有给固定宽高，那页面是不是就一直在抖动？
+这种处理方法，不仅用户体验效果差，同时浪费网络资源。
+
+这种场景下，产品经理又会希望这里的查询是实时的，那我们自然会想说，拉大没两次查询的间隔，那防抖的设计就应运而生了，
 
 
+如果规定一分钟，
+
+三种场景
+
+1. 如果在29秒还在触发，就不会执行
+2. 如果在29秒停顿了下，就不触发了，那就会立即执行
+3. 如果到了59秒59毫秒还在触发，就执行事件，
 
 ```javascript
 /**
@@ -37,7 +48,20 @@ function debounce(func, wait = 1000) {
 
 高频时间在规定的时间内不管触发事件多少次，都只定时去执行一次
 
-1. 节流1:时间戳
+节流讲究的是两次事件的间隔一定是相同的
+
+设置了节流时间为一分钟
+
+三种场景, (假设用户飞快频繁触发事件)
+
+1. 如果在29秒还在触发，不会执行;
+2. 如果在29秒停顿了下，就不触发了，也不会执行;
+3. 59秒59毫秒, 不管用户是否在触发，都一定会执行;
+
+
+
+
+4. 节流1:时间戳
 
 特点
 - 第一次触发即立即执行
