--- a/source/_posts/非技术类/上海互联网公司.md
+++ b/source/_posts/非技术类/上海互联网公司.md
@@ -7,7 +7,7 @@
 3. [ ]  字节跳动（上海研发中心、巨量引擎，闵行漕河泾，抖音、游戏、教育等，字节本体和巨量引擎差距较大，不同岗位加班差距很大，原大小周8月起取消。年终0-6个月，一般拿3个月，少数5个月以上）；
 4. [ ]  蚂蚁集团（上海研发中心，唯一未上市巨头，浦东支付宝大厦，支付宝、蚂蚁科技中心等，10-10-5，比较卷，年终与阿里类似）;
 5. [ ]  美团点评（大众点评，长宁北新泾，生活服务平台，10-9-5，年底一般3.5个月，其中0.5个月上半年绩效工资+0.5个月下半年绩效工资+2.5个月年终奖工资）；
-6. [ ]  拼多多（总部，长宁娄山关路，综合电商，11-11-6，周末给加班费，猝死1例；年底一般4个月，其中固定年终奖 2 个月，在春节前发放；绩效年终奖则根据 “ 271 ” 的绩效考核评定后发放，70% 的员工能拿 2 个月）。
+6. [ ]  拼多多（总部，长宁娄山关路，综合电商，11-11-6，周末给加班费<!-- ，猝死1例 -->；年底一般4个月，其中固定年终奖 2 个月，在春节前发放；绩效年终奖则根据 “ 271 ” 的绩效考核评定后发放，70% 的员工能拿 2 个月）。
 
 
 
@@ -68,7 +68,7 @@
 ## 人工智能&商业智能
 
 1. [ ] 触宝（总部，闵行新龙路，触宝输入法、触宝电话等海外市场为主，10-9-5）
-1. [ ] 商汤（总部，徐汇漕河泾，人工智能领域，9-8-5，猝死1例，年奖一般3个月）
+1. [ ] 商汤（总部，徐汇漕河泾，人工智能领域，9-8-5，<!-- 猝死1例 -->，年奖一般3个月）
 1. [ ] 旷视（上海分公司，徐汇虹漕路，人工智能领域，年奖一般2个月）
 1. [ ] 依图（总部，长宁区娄山关路，人工智能领域，年底1-2个月）
 1. [ ] 云从（上海分公司，浦东张江高科，人工智能领域）
