fix: 解决大小写名称文件夹冲突的问题

--- a/source/_posts/1-JavaScript基础2/继承.md
+++ b/source/_posts/1-JavaScript基础2/继承.md
@@ -95,7 +95,7 @@ console.log(instance2.colors); // [ 'red', 'green', 'black' ]
 ## 盗用构造函数继承
 
 
-<details Open>
+<details>
 <summary>click here</summary>
 
 > 为了解决原型包含引用类型导致的变量共享的问题，出现一种盗用构造函数实现继承的方式. 基本思路很简单：就是在子类构造函数中调用父类构造函数。因为毕竟函数就是在特定构造函数执行代码的简单对象，所以可以使用 `call` 或者 `apply` 方法，以新创建的对象为上下文执行父类构造函数。
