--- a/source/_posts/前端other/性能优化.md
+++ b/source/_posts/前端other/性能优化.md
@@ -5,7 +5,7 @@
 
 🧠 loading......
 
-其实性能优化是贯穿我们开发的全流程
+其实性能优化是贯穿我们开发的全流程: 代码编写, 脚手架打包, 网络
 
 
 
@@ -38,6 +38,20 @@ react中性能优化主要侧重于: 避免不必要的组建更新;
 
 
 
+## webpack
+
+webpack打包一个是排除一部分，缩短打包时间；
+另一个是压缩代码，删除主食，缩小打包体积;
+
+另外就是利用webpack 提供的功能，在路由的地方，添加一个魔法注释进行页面级别拆包;
+
+1. dll，优化打包速度和体积
+2. externals，思想和效果同dll, 部分较大的库使用cdn地址，缩短打包时间;
+3. tread-loader, 开启多线程打包(webpack 5好像已经自动支持了)
+
+
+
+
 ## 网络层面
 
 我认为网络层的优化主要是希望可以更快的获取资源，有了这个思路=>
@@ -52,3 +66,8 @@ react中性能优化主要侧重于: 避免不必要的组建更新;
 ## 浏览器的渲染
 
 1. 利用prefetch/preload, 对资源进行预加载;
+2. 减少重流重绘;
+3. 减少空的img请求;
+<!-- 4. defer/async -->
+   <!-- 1. defer: -->
+   <!-- 2. defer: -->
