--- a/source/_posts/1-JavaScript基础/继承.md
+++ b/source/_posts/1-JavaScript基础/继承.md
@@ -312,7 +312,7 @@ console.log(instance2.friends); // [ 'Herry', 'Merry', 'cat' ]
 <details>
 <summary>click here</summary>
 
-*实现思路*：在函数内部创建一个新函数，并继承自传入的参数对象， 然后在函数内部为新创建的函数增加方法、属性等对其进行增强，最后返回这个对象。
+*实现思路*： 这种继承方法有些像封装一个工厂函数, 在这个工厂函数内部，首先利用原型式继承创建一个新的对象，继承自自传入的对象,然后在这个新的对象上添加属性、方法对其增强。
 
 
 ```javascript
@@ -368,7 +368,7 @@ instance2.friends; // [ 'Herry', 'Merry', 'cat' ] // 改变了
 组合继承实际上存在效率问题，最主要的效率问题是，父类构造函数始终会被调用至少两次，一次是为子类构造函数创建原型函数时，另一次是调用子类构造函数时; 另外一个问题是，在父类上定义的属性，同时存在于子类构造函数的原型 和 子类实例上;
 
 
-回忆一下 组合继承的实现: 利用 **原型链继承方法** ，利用 **盗用构造函数继承属性**; 而利用原型链继承方法的具体代码实现，就是创建原型的实例，并将该实例赋值给子类的 prototype;
+回忆一下 组合继承的实现: 利用 **盗用构造函数**继承属性; 而利用 **原型链** 继承方法，具体代码实现，就是创建原型的实例，并将该实例赋值给子类的 prototype;
 
 而寄生组合式继承，实现思路是将 这个利用原型链继承方法的步骤，改为创建父类原型的副本, 并重新构建子类和父类原型的副本之间的原型链关系 大概代码如下:
 
