fix: 添加了JSON.stringify

--- a/source/_posts/1-JavaScript基础/深拷贝.md
+++ b/source/_posts/1-JavaScript基础/深拷贝.md
@@ -1,7 +1,10 @@
 ## 乞丐版深拷贝
 
-- JSON.parse(JSON.stringify())
-- 缺点：无法处理循环引用问题
+JSON.parse(JSON.stringify())
+
+缺点：
+  1. 无法处理循环引用问题
+  2. function 类型会丢失
 
 ```javascript
 const obj = {
@@ -28,10 +31,6 @@ JSON.parse(JSON.stringify(obj))
 ```
 
 
-<!-- ## 我发现使用map也可以实现深拷贝 -->
-
-
-
 
 
 ## 略微升级版
@@ -42,7 +41,7 @@ JSON.parse(JSON.stringify(obj))
 WeakMap 与Map的区别是，WeakMap的键只能是对象，否则报错
 WeakMap 作为存储是因为他的键名所引用的对象都是弱引用
 
-==仍然存在的问题==：
+仍然存在的问题：
 ```js
 const map2 = new Map();
 map2.set(Symbol(0), 0);
@@ -70,7 +69,6 @@ const clone = function(source, map = new Map()) {
     return map.get(source);
   }
 
-
   const target = Array.isArray(source) ? [] : {};
   map.set(source, target);
 
@@ -88,7 +86,7 @@ obj.circleRef = obj;
 
 
 
-
+<!--
 
 
 ## lodash的深拷贝+理解注释
