del: 删除几篇文章

--- a/source/_posts/3-Vue源码学习/0源码-主线.md
+++ b/source/_posts/3-Vue源码学习/0源码-主线.md
@@ -2,22 +2,41 @@
 
 当我们执行new Vue的时候，实际上会调用`this._init`执行一系列的初始化
 
-Vue 初始化的过程做了几件事情，==合并配置==，==初始化生命周期==，==初始化事件中心，==初始化渲染==，==初始化 data、props、computed、watcher==等等
+Vue 初始化的过程做了几件事情，
+1. **合并vue实例选项**
+2. **初始化生命周期**
+3. **初始化事件中心**
+4. **初始化渲染**
+5. **初始化 data、props、computed、watcher**
 
-详见 => [4源码-new Vue](/Blog/2-框架/Vue/4源码-newVue/)
+```js
+function Vue (options) {
+  if (process.env.NODE_ENV !== 'production' &&
+    !(this instanceof Vue)
+  ) {
+    warn('Vue is a constructor and should be called with the `new` keyword')
+  }
+  this._init(options)
+}
 
-【注： 同时参考 new 操作符时发生了什么？】
+initMixin(Vue)
+stateMixin(Vue)
+eventsMixin(Vue)
+lifecycleMixin(Vue)
+renderMixin(Vue)
+
+export default Vue
+
+```
 
 
 
 
 ## Vue实例挂载的实现
 
-在原型上定义$mount方法，用来将 `templete` 字符串转换为 `render` 方法。要牢记，所有 Vue 组件的渲染最终都需要 render 方法；
-另外一个重要的过程就是实例化一个渲染Watcher，在他的毁掉函数中会调用updateComponent 方法，再次方法中调用 vm.render 方法生成虚拟DOM， 最终调用 vm._update 更新DOM
+在原型上定义$mount方法, 该方法 `templete` 字符串转换为 `render` 方法。所有 Vue 组件的渲染最终都需要 render 方法；
+另外一个重要的过程就是实例化一个渲染Watcher，在他的毁掉函数中会调用 updateComponent 方法，再次方法中调用 vm.render 方法生成虚拟DOM， 最终调用 vm._update 更新DOM
 
-
-详见 => [5源码-Vue实例挂载的实现](/Blog/2-框架/Vue/5源码-Vue实例挂载的实现/)
 
 
 
