--- a/source/_posts/3-Vue源码学习/2源码-构建过程.md
+++ b/source/_posts/3-Vue源码学习/2源码-构建过程.md
@@ -4,6 +4,5 @@
 
 Runtime Only VS Runtime + Compiler
 
-Runtime Only 版本 vue.js 的时候，通常需要借助如webpack 的vue-loader 工具把 .vue 文件编译成 javascript, 因为是在编译阶段做的，所以代码只包含运行时的 vue.js , 所以代码体积也会更轻量
-
-Runtime + Compiler 是带有编译器的版本，
+1. Runtime Only 版本 vue.js 的时候，通常需要借助如webpack 的vue-loader 工具把 .vue 文件编译成 javascript, 因为是在编译阶段做的，所以代码只包含运行时的 vue.js, 所以代码体积也会更轻量;
+2. Runtime + Compiler 是自己带有编译器的版本;
