--- a/source/_posts/前端other/_腾讯面试题.md
+++ b/source/_posts/前端other/_腾讯面试题.md
@@ -1,3 +1,86 @@
+- [前端面经分享 | 腾讯](https://juejin.cn/post/6844903853788233741)
+
+## 一面（电话面）
+
+
+1. [ ] 合并两个数组
+2. [ ] 内存泄漏
+3. [ ] 闭包
+4. [ ] 面向对象理解
+5. [ ] 函数式编程理解
+6. [ ] 斐波那契数列？怎么优化？
+7. [ ] http和https区别
+8. [ ] https建立的过程
+9. [ ] 对微服务有什么了解？
+10. [ ] 从数组中找出三数之和为n
+
+
+### 二面（电话面）
+
+
+1. [ ] 对设计有研究吗
+2. [ ] 红色适合搭配什么颜色，忌讳搭配什么颜色
+3. [ ] vue和react的区别
+4. [ ] react fiber架构的理解
+5. [ ] 实现一个css框架你有什么思路吗
+6. [ ] 二分查找的时间复杂度怎么求？
+7. [ ] 看过算法导论吗
+8. [ ] 对图有了解吗
+9. [ ] http建立连接过程，为什么不是四次或两次握手
+10. [ ] 做软件管家是怎么分析需求的？最大收获是什么？现在翻盘想想有什么做的好的地方，和可以改进的地方？
+11. [ ] 天擎的权限管理是怎么做的？
+12. [ ] 天擎样式是怎么划分的？
+13. [ ] 对未来的规划
+14. [ ] 为什么想来深圳工作
+15. [ ] 为什么毕业不直接来深圳工作
+16. [ ] 以后对全栈有兴趣吗
+17. [ ] 对c++，go有了解吗
+
+
+### 三面(现场面)
+
+
+1. [ ] 前端未来规划？
+1. [ ] 3年之后的规划？
+1. [ ] 有明确的想从事的路线吗？to B？to C？全栈？
+1. [ ] node主要用来解决什么问题？
+1. [ ] node做BFF的优点是什么？
+1. [ ] 对项目监控这块有什么了解吗？
+1. [ ] 对微服务有了解吗
+1. [ ] 聊一聊docker？
+1. [ ] 当时什么从事前端？
+1. [ ] 整个学习历程是什么？
+1. [ ] 介绍部门团队的情况
+
+问面试官的问题：
+
+1. 现在部门采取的前后端技术栈是什么？
+2. 当时项目为什么需要重构呢？
+3. 是原来的架构遇到了什么问题吗？
+4. 如果有幸加入贵公司，我会负责什么内容？您对我的期望是什么？
+
+
+### 四面（总监面）
+
+
+1. [ ] 5g时代的来临对前端有什么机遇与挑战？
+2. [ ] Html4，html5是建立在http上的，http的下一代要解决什么问题？
+3. [ ] 对现在主流前端框架的看法？
+4. [ ] 看你有github，你一般在github上做什么呢？
+5. [ ] github看过什么关于前端项目的源码？
+6. [ ] 向什么源码提过pr？
+7. [ ] restful接口架构的优缺点？
+8. [ ] restful接口架构会导致什么安全问题，具体怎么解决？
+9. [ ] 团队合作有遇到过分歧吗？最后是怎么解决的？有什么事例最后是采取你建议的解决方案？
+10. [ ] 你印象中觉得腾讯工作形式是什么方式呢？
+11. [ ] 为什么想从360离职？
+12. [ ] 深圳到湛江需要多久？
+13. [ ] 深圳到湛江高铁通了吗？
+
+
+
+
+
 ## [腾讯前端面试题-小胡.md](https://github.com/FEGuideTeam/social/blob/master/2018/12/腾讯前端面试题-小胡.md)
 
 
@@ -7,20 +90,20 @@
 主要内容（回忆版）：
 
 1. [ ] 平常遇到过哪些 Pc 端兼容，怎么处理的
-1. [ ] flex 的常用 用法和场景
+1. [x] flex 的常用 用法和场景
 1. [ ] h5 的新特性有哪些（如果问到 canvas，谨慎回答，他们用得很溜，容易翻车）
-1. [ ] 给出一道题目，移动端，3 个盒子并排，宽高自适应，间距固定
-1. [ ] 数组去重
-1. [ ] es6 的指向问题
-1. [ ] es6 的新特性
-1. [ ] 闭包的含义、作用、使用场景、意义
+1. [x] 给出一道题目，移动端，3 个盒子并排，宽高自适应，间距固定
+1. [x] 数组去重
+1. [x] es6 的this指向问题
+1. [x] es6 的新特性
+1. [x] 闭包的含义、作用、使用场景、意义
 1. [ ] 内存泄漏的意义、场景、判断
-1. [ ] let 的 特点
-1. [ ] 箭头函数和普通函数的区别
-1. [ ] es5 和 es6 继承的 不同
+1. [x] let 的 特点
+1. [x] 箭头函数和普通函数的区别
+1. [x] es5 和 es6 继承的 不同
 1. [ ] 多重继承怎么实现
-1. [ ] 原型链
-1. [ ] call 和 apply 的区别，第一个参数必须是 this 吗
+1. [x] 原型链
+1. [x] call 和 apply 的区别，第一个参数必须是 this 吗
 1. [ ] async 和 defer 的不同
 1. [ ] promise 的作用和使用方法
 1. [ ] catch 之后的 then 还会执行吗
