--- a/source/_posts/前端other/_腾讯面试题.md
+++ b/source/_posts/前端other/_腾讯面试题.md
@@ -3,14 +3,14 @@
 ## 一面（电话面）
 
 
-1. [ ] 合并两个数组
+1. [x] 合并两个数组
 2. [ ] 内存泄漏
 3. [ ] 闭包
 4. [ ] 面向对象理解
 5. [ ] 函数式编程理解
 6. [ ] 斐波那契数列？怎么优化？
-7. [ ] http和https区别
-8. [ ] https建立的过程
+7. [x] http和https区别
+8. [x] https建立的过程
 9. [ ] 对微服务有什么了解？
 10. [ ] 从数组中找出三数之和为n
 
@@ -89,31 +89,31 @@
 
 主要内容（回忆版）：
 
-1. [ ] 平常遇到过哪些 Pc 端兼容，怎么处理的
 1. [x] flex 的常用 用法和场景
-1. [ ] h5 的新特性有哪些（如果问到 canvas，谨慎回答，他们用得很溜，容易翻车）
-1. [x] 给出一道题目，移动端，3 个盒子并排，宽高自适应，间距固定
-1. [x] 数组去重
-1. [x] es6 的this指向问题
-1. [x] es6 的新特性
-1. [x] 闭包的含义、作用、使用场景、意义
-1. [ ] 内存泄漏的意义、场景、判断
-1. [x] let 的 特点
-1. [x] 箭头函数和普通函数的区别
-1. [x] es5 和 es6 继承的 不同
-1. [ ] 多重继承怎么实现
-1. [x] 原型链
-1. [x] call 和 apply 的区别，第一个参数必须是 this 吗
-1. [ ] async 和 defer 的不同
-1. [ ] promise 的作用和使用方法
-1. [ ] catch 之后的 then 还会执行吗
-1. [ ] 平常移动端项目使用的框架
-1. [ ] vue 和 react 的区别
-1. [ ] 虚拟 DOM 的原理
-1. [ ] 简述 MVC 和 MVVM
-1. [ ] 平常自己配过 webpack（前端面试必问，本属于附加题，如果能当面手写一个给面试官看，肯定加分）
-1. [ ] 遇到过哪些移动端兼容问题
-1. [ ] fastclick 解决点击穿透的 原理
+2. [ ] 平常遇到过哪些 Pc 端兼容，怎么处理的
+3. [ ] h5 的新特性有哪些（如果问到 canvas，谨慎回答，他们用得很溜，容易翻车）
+4. [x] 给出一道题目，移动端，3 个盒子并排，宽高自适应，间距固定
+5. [x] 数组去重
+6. [x] es6 的this指向问题
+7. [x] es6 的新特性
+8. [x] 闭包的含义、作用、使用场景、意义
+9. [ ] 内存泄漏的意义、场景、判断
+10. [x] let 的 特点
+11. [x] 箭头函数和普通函数的区别
+12. [x] es5 和 es6 继承的 不同
+13. [ ] 多重继承怎么实现
+14. [x] 原型链
+15. [x] call 和 apply 的区别，第一个参数必须是 this 吗
+16. [ ] async 和 defer 的不同
+17. [ ] promise 的作用和使用方法
+18. [ ] catch 之后的 then 还会执行吗
+19. [ ] 平常移动端项目使用的框架
+20. [ ] vue 和 react 的区别
+21. [ ] 虚拟 DOM 的原理
+22. [ ] 简述 MVC 和 MVVM
+23. [ ] 平常自己配过 webpack（前端面试必问，本属于附加题，如果能当面手写一个给面试官看，肯定加分）
+24. [ ] 遇到过哪些移动端兼容问题
+25. [ ] fastclick 解决点击穿透的 原理
 
 ### 二面：
 
@@ -266,8 +266,8 @@ for(var i =0;i<5;i++){
 
 ### 二面
 
-1. [ ]  离职原因
-1. [ ]  对 ts 的使用情况
+1. [x]  离职原因
+1. [x]  对 ts 的使用情况
 1. [ ]  观察者模式
 1. [ ]  单例模式
 1. [ ]  归并排序
