--- a/source/_面试别人的记录/2021-08-27.md
+++ b/source/_面试别人的记录/2021-08-27.md
@@ -29,7 +29,7 @@
    1. 答: typeof,
 3. js事件循环的了解？
    1. 答:
-   2.
+
 4. promise有了解么？大概介绍下常用方法？
    1. 答：静态方法, race, all, 有什么区别
    2. 实例方法, then, catch
@@ -99,6 +99,61 @@
 
 性能优化
 1. moment, 只引入中文
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+应聘者作答概况
+
+(由于候选人只有一年开发经验)
+
+1. 首先问了简历上项目中解决的问题;
+2. 首先在js基础知识方面，考察了数据类型，this指向，promise方法，继承等，答得都很不错；
+3. css方面，考察了flex布局，position定位，也都答得不错;
+4. 框架方面，考察了vue的key的作用, 组件间的传参之类，响应式的了解, 都答得不错;
+
+
+
+
+1. 首先问了简历上项目中解决的问题，sdk, 线上问题排查等；
+2. 在js基础知识方面，考察了数据类型，promise方法，EventLoop(题目答错了，大概是了解概念的)；
+3. css方面，考察了flex布局，position定位，移动端适配，rem相对于谁, 都答得不错;
+4. 框架方面，考察了react 的性能优化，回答了 React.momo, shouldComponet等;
+5. ts, 刚开始使用，不熟；
+6. 网络，问了下缓存的理解，答得不错；
+
+
+
+
+
+
+
+
+
+
 
 
 
