fix: 隐藏两篇文章

--- a/source/_posts/2-CSS相关/选择器优先级.md
+++ b/source/_posts/2-CSS相关/选择器优先级.md
@@ -11,7 +11,7 @@ S-I-C-E计算规则
 
 | S<br/>(style attribute) | I(ID)    | C(Class)   | E(Element) |
 |-------------------------|----------|------------|------------|
-|                         | ID选择器 | 类名选择器 | 标签选择器 |
+| 元素行内样式            | ID选择器 | 类名选择器 | 标签选择器 |
 
 
 如上表的表示关系，如果第二行的选择器出现，则在其对应的位置加1
@@ -21,9 +21,9 @@ S-I-C-E计算规则
 来看看如下示例的ICE
 
 ```css
-p{}                       // 001
-p.name {color: red; }     // 010
-p.name#red {color: red; } // 110
+p{}                       // 0001
+p.name {color: red; }     // 0010
+p.name#red {color: red; } // 0110
 ```
 
 
